src/test/compile-fail/fully-qualified-type-name1.rs
// Test that we use fully-qualified type names in error messages.

fn main() {
    let x: option<uint>;
    x = 5;
    //!^ ERROR mismatched types: expected `core::option::option<uint>`
}
